tests/valid/test7.wf
a = TRUE;
b = NOT (NOT a);
print(b);
