tests/invalid/error6.wf
a = TRUE XOR FALSE;
print(a);
